--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
     <head th:fragment="head">
-        <title>TechShop</title>
+        <title>Rainbow World</title>
         <meta charset="UTF-8"/>
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
         <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
@@ -11,46 +11,51 @@
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>        
     </head>
     <body>
-        <header th:fragment="header" class="header">
-            <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
-                <div class="container">
-                    <a th:href="@{/}" class="navbar-brand">[[#{aplicacion.titulo}]]</a>
-                    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        
+        <section th:fragment="imagen">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tooltyp.com%2F8-beneficios-de-usar-imagenes-en-nuestros-sitios-web%2F&psig=AOvVaw1XzgVrIRMaPzxczZLWVt-W&ust=1708744437459000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMiGvZu_wIQDFQAAAAAdAAAAABAE" width="200px" height="200px" class="d-block w-100" alt="...">
+                    
+        </section>
+        <img src="image (23).png" alt=""/>
+        <header th:fragment="header" class="header" >
+
+            <nav class="navbar navbar-expand-lg bg-body-tertiary" style="height: 40px;">
+                <div class="container-fluid" style="background-color: rgba(39, 15, 59); color: white; height: 119px; padding-top: 20px;" >
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <ul class="navbar-nav">
-                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
-                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
-                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
-                        </ul>
-                        <div class="col-md-3">
-                            <ul class="navbar-nav">                                
-                                <li class="nav-item px-2"><a class="nav-link" th:href="@{/(lang=es)}">ES</a></li>
-                                <li class="nav-item px-2"><a class="nav-link" th:href="@{/(lang=en)}">EN</a></li>
-                            </ul>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="margin-left: 740px; " >
+                        <div class="navbar-nav">
+                            <a class="nav-link active" style="color: white;" aria-current="page" href="#" >Inicio</a>
+                            <a class="nav-link active" style="color: white;" aria-current="page" href="#">Anime</a>
+                            <a class="nav-link active" style="color: white;" aria-current="page" href="#">Tecnologia</a>
+                            <a class="nav-link active" style="color: white;" aria-current="page" href="#">Comics</a>
+                            <a class="nav-link active" style="color: white;" aria-current="page" href="#">Hogar</a>
+                            <a class="nav-link active" style="color: white;" aria-current="page" href="#">Belleza</a>
+                            <a href="#" style="color: white;margin-top:10px;"><span style="margin-top: 20px; margin-right: 20px; margin-left: 15px; font-size: 20px;"><i class="fa fa-shopping-cart "></i></span>
+                            </a>
+                            <a href="#" style="color: white;margin-top:10px;"><span style="font-size: 20px;"><i class="fas fa-user-circle "></i></span></a>
+                            
                         </div>
                     </div>
                 </div>
             </nav>
-            <section id="main-header" class="py-2 bg-success text-white">
+            
+             
+            <footer th:fragment="footer" style="background-color: rgba(39, 15, 59); height:56px; ">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h1><i class="fas fa-cog"></i> [[#{plantilla.suTienda}]]</h1>
-                        </div>
+                    <div class="col">
+                        <p style="color: white;">
+                            &COPY [[#{plantilla.derechos}]]
+                            <i class="fab fa-instagram" style="font-size: 35px; padding-left: 670px;"></i>
+                            <i class="fab fa-facebook" style="font-size: 35px; padding-left:15px; "></i>
+                            <i class="fab fa-twitter" style="font-size: 35px; padding-left:15px;"></i>
+
+                        </p>
+
                     </div>
                 </div>
-            </section>
-        </header>
-        <footer th:fragment="footer" class="bg-info text-white mt-5 p-2">
-            <div class="container">
-                <div class="col">
-                    <p class="lead text-center">
-                        &COPY [[#{plantilla.derechos}]]
-                    </p>
-                </div>
-            </div>
-        </footer>
+            </footer>
     </body>
 </html>
