--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,10 @@
         <title>Rainbow World</title>
     </head>
     <body>
-         <img src="https://es.m.wikipedia.org/wiki/D%C3%B3berman#/media/Archivo%3ADobermann_Father-and-son.jpg" width="200px" height="200px" alt="...">
-            
         <header th:replace= "~{layout/plantilla :: header}"/>
-         <section th:replace="~{layout/plantilla  :: imagen}"></section>
-          <footer th:replace= "~{layout/plantilla :: footer}"/>
+        <section th:replace="~{layout/plantilla  :: frase}"></section>
+        <section th:replace="~{layout/plantilla  :: titulo}"></section>
+        <section th:replace="~{layout/plantilla  :: productos}"></section>
+        <footer th:replace= "~{layout/plantilla :: footer}"/>
     </body>
 </html>
